@@ -5,7 +5,11 @@ package br.gov.pb.der.netnotifyagent;
 
 import java.awt.AWTException;
 
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
+
 import br.gov.pb.der.netnotifyagent.service.RabbitmqService;
+import br.gov.pb.der.netnotifyagent.ui.FxJavaInitializer;
 import br.gov.pb.der.netnotifyagent.ui.TrayService;
 import br.gov.pb.der.netnotifyagent.utils.SingleInstanceLock;
 
@@ -15,31 +19,36 @@ import br.gov.pb.der.netnotifyagent.utils.SingleInstanceLock;
  */
 public class Netnotifyagent {
 
+    private static final Logger logger = LoggerFactory.getLogger(Netnotifyagent.class);
     private static RabbitmqService rabbitmqService;
 
     public static void main(String[] args) {
         if (!SingleInstanceLock.acquire()) {
-            System.out.println("NetNotify Agent ja está em execução. Encerrando.");
+            logger.info("NetNotify Agent ja está em execução. Encerrando.");
             return;
         }
 
-        System.out.println("Iniciando NetNotify Agent...");
+        logger.info("Iniciando NetNotify Agent...");
 
         try {
             // Inicializa o serviço RabbitMQ
             rabbitmqService = new RabbitmqService();
+
+            // Inicializa o toolkit JavaFX na thread principal antes de criar a tray.
+            // Isso evita deadlocks ao chamar Platform.startup() pela AWT EDT mais tarde.
+            FxJavaInitializer.ensureInitialized();
 
             // Inicializa tray icon
             final TrayService[] trayService = new TrayService[1];
             try {
                 trayService[0] = new TrayService(rabbitmqService);
             } catch (AWTException awt) {
-                System.err.println("Tray not available: " + awt.getMessage());
+                logger.error("Tray not available: {}", awt.getMessage());
             }
 
             // Configura shutdown hook para parada graceful
             Runtime.getRuntime().addShutdownHook(new Thread(() -> {
-                System.out.println("Finalizando aplicação...");
+                logger.info("Finalizando aplicação...");
                 if (rabbitmqService != null) {
                     rabbitmqService.stop();
                 }
@@ -49,8 +58,10 @@ public class Netnotifyagent {
             }));
 
             // Inicia o consumo de mensagens em thread separada
-            Thread consumerThread = new Thread(() -> rabbitmqService.startConsuming(), "rabbitmq-consumer");
-            consumerThread.setDaemon(false);
+            Thread consumerThread = Thread.ofPlatform()
+                    .name("rabbitmq-consumer")
+                    .daemon(false)
+                    .unstarted(() -> rabbitmqService.startConsuming());
             consumerThread.start();
 
             // Mantém a thread main viva aguardando o consumer
@@ -61,7 +72,7 @@ public class Netnotifyagent {
             }
 
         } catch (Exception e) {
-            System.err.println("Erro crítico na aplicação: " + e.getMessage());
+            logger.error("Erro crítico na aplicação: {}", e.getMessage());
             System.exit(1);
         }
     }
