@@ -5,10 +5,9 @@ import java.io.File;
 import java.io.FileInputStream;
 import java.io.InputStream;
 import java.lang.reflect.Field;
-import java.lang.reflect.InvocationTargetException;
-import java.lang.reflect.Method;
 import java.nio.file.Files;
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Enumeration;
 import java.util.List;
 import java.util.Properties;
@@ -20,42 +19,101 @@ import br.gov.pb.der.netnotifyagent.utils.Constants;
 
 /**
  * Launcher inteligente que configura JavaFX automaticamente
- * para permitir execução via duplo clique e linha de comando
+ * para permitir execução via duplo clique e linha de comando.
+ *
+ * Se o JVM foi iniciado sem --module-path (ex: IDE, duplo-clique no JAR),
+ * o JDK pode carregar o JavaFX 17 nativo em vez do JavaFX 22 das libs/.
+ * Nesse caso, o launcher relança o processo com o --module-path correto.
  */
 public class NetnotifyagentLauncher {
 
-    /*
-     * private static final String[] REQUIRED_JAVAFX_MODULES = {
-     * "javafx.controls", "javafx.web", "javafx.base", "javafx.graphics"
-     * };
-     */
+    private static final String JAVAFX_MODULES =
+            "javafx.controls,javafx.web,javafx.swing,javafx.fxml,javafx.media";
+
     public static void main(String[] args) {
         System.out.println("=== NetNotify Agent Launcher ===");
 
         try {
-            // Validar configuração de Java antes de tudo
+            // Se o JDK carregou o JavaFX errado (ex: JavaFX 17 bundled), relançar
+            // com o --module-path apontando para libs/ que contém o JavaFX 22.
+            if (!isCorrectJavaFXVersion()) {
+                File libsDir = findLibsDirectory();
+                if (libsDir != null) {
+                    System.out.println("JavaFX versão incorreta detectada. Relançando com --module-path...");
+                    relaunchWithModulePath(libsDir, args);
+                    return; // O processo relançado continuará a execução
+                }
+                System.err.println("AVISO: Versão incorreta do JavaFX e diretório libs/ não encontrado.");
+            }
+
             validateJavaConfiguration();
-
-            // Auto-configurar a aplicação no Windows (Scheduled Task para auto-iniciar)
-            // Isso é feito ANTES de qualquer inicialização do JavaFX
             AutoSetup.ensureScheduledTaskAtLogon();
-
-            // Detectar contexto de execução
             detectExecutionContext();
 
-            // Configurar JavaFX
-            setupJavaFX();
-
-            // Inicializar JavaFX Platform
-            initializeJavaFXPlatform();
-
             System.out.println("Iniciando aplicação principal...");
-
-            // Executar aplicação principal
             Netnotifyagent.main(args);
 
         } catch (Exception e) {
             handleLaunchError(e);
+        }
+    }
+
+    /**
+     * Verifica se a versão do JavaFX carregada é 22 ou superior.
+     * Retorna true se a versão estiver correta ou não puder ser determinada.
+     */
+    private static boolean isCorrectJavaFXVersion() {
+        try {
+            Class<?> platformClass = Class.forName("javafx.application.Platform");
+            Module m = platformClass.getModule();
+            if (!m.isNamed()) return true; // Carregado do classpath, não do sistema de módulos
+            var versionOpt = m.getDescriptor().version();
+            if (versionOpt.isEmpty()) return true;
+            int major = Integer.parseInt(versionOpt.get().toString().split("[.+\\-]")[0]);
+            return major >= 22;
+        } catch (ClassNotFoundException e) {
+            return true; // JavaFX ausente; falhará depois com mensagem clara
+        } catch (Exception e) {
+            return true; // Não foi possível determinar; prosseguir
+        }
+    }
+
+    /**
+     * Relança o processo atual com --module-path apontando para libsDir,
+     * garantindo que o JavaFX 22 seja carregado em vez do JavaFX 17 do JDK.
+     */
+    private static void relaunchWithModulePath(File libsDir, String[] originalArgs) {
+        String javaHome = System.getProperty("java.home");
+        File java  = new File(javaHome, "bin" + File.separator + "java.exe");
+        File javaw = new File(javaHome, "bin" + File.separator + "javaw.exe");
+        File javaUnix = new File(javaHome, "bin" + File.separator + "java");
+        String javaExe = java.exists() ? java.getAbsolutePath()
+                : javaw.exists() ? javaw.getAbsolutePath()
+                : javaUnix.exists() ? javaUnix.getAbsolutePath()
+                : "java";
+
+        List<String> cmd = new ArrayList<>();
+        cmd.add(javaExe);
+        cmd.add("-Dfile.encoding=UTF-8");
+        cmd.add("--module-path");
+        cmd.add(libsDir.getAbsolutePath());
+        cmd.add("--add-modules");
+        cmd.add(JAVAFX_MODULES);
+        cmd.add("-cp");
+        cmd.add(System.getProperty("java.class.path", "."));
+        cmd.add(NetnotifyagentLauncher.class.getName());
+        cmd.addAll(Arrays.asList(originalArgs));
+
+        System.out.println("Relançamento: " + javaExe + " --module-path " + libsDir.getName() + " ...");
+
+        ProcessBuilder pb = new ProcessBuilder(cmd);
+        pb.directory(new File(System.getProperty("user.dir")));
+        pb.inheritIO();
+        try {
+            System.exit(pb.start().waitFor());
+        } catch (Exception e) {
+            System.err.println("Falha no relançamento: " + e.getMessage());
+            handleLaunchError(new RuntimeException("Falha no relançamento com --module-path", e));
         }
     }
 
@@ -65,7 +123,6 @@ public class NetnotifyagentLauncher {
             String configuredJavaHome = settings.getProperty("java.home", "").trim();
 
             if (!configuredJavaHome.isEmpty()) {
-                // Remover aspas se existirem
                 if (configuredJavaHome.startsWith("\"") && configuredJavaHome.endsWith("\"")) {
                     configuredJavaHome = configuredJavaHome.substring(1, configuredJavaHome.length() - 1);
                 }
@@ -80,8 +137,7 @@ public class NetnotifyagentLauncher {
                     System.err.println("AVISO: Diretório java.home configurado não existe: " + configuredJavaHome);
                     System.err.println("Usando Java atual do sistema: " + System.getProperty("java.home"));
                 } else if (!javaExe.exists() && !javaUnix.exists()) {
-                    System.err.println(
-                            "AVISO: Executável Java não encontrado em: " + configuredJavaHome + File.separator + "bin");
+                    System.err.println("AVISO: Executável Java não encontrado em: " + configuredJavaHome + File.separator + "bin");
                     System.err.println("Usando Java atual do sistema: " + System.getProperty("java.home"));
                 } else {
                     System.out.println("Java configurado validado com sucesso");
@@ -122,71 +178,14 @@ public class NetnotifyagentLauncher {
         System.out.println("Contexto de execução detectado: " +
                 (command.endsWith(".jar") || command.endsWith(".exe") ? "Duplo clique" : "Linha de comando"));
 
-        // Debug info
         System.out.println("Java version: " + System.getProperty("java.version"));
         System.out.println("Java home: " + System.getProperty("java.home"));
         System.out.println("Working dir: " + System.getProperty("user.dir"));
     }
 
-    private static void setupJavaFX() throws Exception {
-        // Adicionar target/classes ao classpath (para desenvolvimento)
-        ensureProjectClassesInPath();
-
-        // Encontrar diretório libs PRIMEIRO
-        File libsDir = findLibsDirectory();
-        if (libsDir == null) {
-            throw new RuntimeException("Diretório 'libs' não encontrado. " +
-                    "Certifique-se de que as dependências JavaFX estão disponíveis.");
-        }
-
-        System.out.println("Diretório libs encontrado: " + libsDir.getAbsolutePath());
-
-        // CRUCIAL: Extrair e carregar natives (.dll) ANTES de carregar classes JavaFX
-        System.out.println("Extraindo e carregando natives do JavaFX...");
-        extractAndLoadJavaFXNatives(libsDir);
-
-        // Configurar module-path
-        setupModulePath(libsDir);
-
-        // Adicionar JARs ao classpath dinamicamente
-        addJavaFXToClasspath(libsDir);
-
-        // Verificar se JavaFX já está disponível
-        if (isJavaFXAvailable()) {
-            System.out.println("JavaFX já disponível no classpath");
-        }
-    }
-
-    private static void ensureProjectClassesInPath() {
-        // Durante desenvolvimento, as classes estão em target/classes
-        // Procurar por target/classes no diretório de trabalho atual
-        File targetClasses = new File("target/classes");
-        if (targetClasses.exists() && targetClasses.isDirectory()) {
-            System.out.println("target/classes encontrado: " + targetClasses.getAbsolutePath());
-            // As classes já estão no classpath via ClassLoader padrão
-            // Se executado via IDE/Maven, isso já funciona
-            // Se executado direto, é necessário que o classpath esteja configurado
-        }
-    }
-
-    private static boolean isJavaFXAvailable() {
-        try {
-            Class.forName("javafx.application.Platform");
-            Class.forName("javafx.scene.web.WebView");
-            Class.forName("javafx.scene.control.Alert");
-            System.out.println("Verificação JavaFX: OK");
-            return true;
-        } catch (ClassNotFoundException e) {
-            System.out.println("Verificação JavaFX: JavaFX não encontrado - " + e.getMessage());
-            return false;
-        }
-    }
-
     private static File findLibsDirectory() {
-        // Estratégias para encontrar o diretório libs
         List<String> searchPaths = new ArrayList<>();
 
-        // 1. Relativo ao JAR atual
         try {
             String jarPath = NetnotifyagentLauncher.class.getProtectionDomain()
                     .getCodeSource().getLocation().getPath();
@@ -197,12 +196,8 @@ public class NetnotifyagentLauncher {
             System.out.println("Não foi possível determinar localização do JAR: " + e.getMessage());
         }
 
-        // 2. Diretório de trabalho atual
         searchPaths.add("libs");
         searchPaths.add("./libs");
-        searchPaths.add("../libs");
-
-        // 3. Diretório target (para desenvolvimento)
         searchPaths.add("target/libs");
         searchPaths.add("target/dependency");
 
@@ -210,8 +205,8 @@ public class NetnotifyagentLauncher {
             File dir = new File(path);
             System.out.println("Procurando libs em: " + dir.getAbsolutePath());
             if (dir.exists() && dir.isDirectory()) {
-                File[] javaFxJars = dir
-                        .listFiles((d, name) -> name.toLowerCase().contains("javafx") && name.endsWith(".jar"));
+                File[] javaFxJars = dir.listFiles(
+                        (d, name) -> name.toLowerCase().contains("javafx") && name.endsWith(".jar"));
                 if (javaFxJars != null && javaFxJars.length > 0) {
                     System.out.println("JavaFX JARs encontrados: " + javaFxJars.length);
                     return dir;
@@ -222,53 +217,21 @@ public class NetnotifyagentLauncher {
         return null;
     }
 
-    private static void setupModulePath(File libsDir) {
-        String currentModulePath = System.getProperty("java.module.path", "");
-        String newModulePath = libsDir.getAbsolutePath();
-
-        if (!currentModulePath.isEmpty()) {
-            newModulePath = currentModulePath + File.pathSeparator + newModulePath;
-        }
-
-        System.setProperty("java.module.path", newModulePath);
-        System.out.println("Module path configurado: " + newModulePath);
-    }
-
-    private static void addJavaFXToClasspath(File libsDir) throws Exception {
-        File[] jarFiles = libsDir.listFiles((dir, name) -> name.toLowerCase().endsWith(".jar"));
-
-        if (jarFiles == null || jarFiles.length == 0) {
-            throw new RuntimeException("Nenhum JAR encontrado no diretório libs");
-        }
-
-        // Em Java 17+, não podemos usar URLClassLoader.addURL() diretamente
-        // Os JARs já estão no classpath via Maven Manifest
-        // O importante é que os natives foram extraídos e adicionados ao
-        // java.library.path
-        System.out.println("JavaFX JARs estão no classpath via manifesto (Java 17+)");
-        System.out.println("Total de JARs em libs: " + jarFiles.length);
-
-        // Verificar novamente se JavaFX está disponível
-        if (!isJavaFXAvailable()) {
-            throw new RuntimeException("JavaFX ainda não está disponível após configuração do classpath");
-        }
-    }
-
     /**
      * Extrai os natives (.dll) dos JARs do JavaFX e adiciona o diretório ao
-     * java.library.path
-     * Isso é CRUCIAL para que o WebView encontre jfxwebkit.dll
+     * java.library.path. Usado apenas como fallback quando o --module-path
+     * não está disponível.
      */
+    @SuppressWarnings("unused")
     private static void extractAndLoadJavaFXNatives(File libsDir) {
         try {
-            // Criar diretório temporário para natives
             File nativesDir = new File(System.getProperty("java.io.tmpdir"),
                     "javafx-natives-" + System.currentTimeMillis());
             nativesDir.mkdirs();
             System.out.println("Diretório de natives: " + nativesDir.getAbsolutePath());
 
-            // Procurar por arquivos .dll nos JARs do JavaFX
-            File[] javafxJars = libsDir.listFiles((dir, name) -> name.contains("javafx") && name.endsWith("-win.jar"));
+            File[] javafxJars = libsDir.listFiles(
+                    (dir, name) -> name.contains("javafx") && name.endsWith("-win.jar"));
 
             if (javafxJars == null || javafxJars.length == 0) {
                 System.out.println("Aviso: Nenhum JAR do JavaFX com classificador -win encontrado");
@@ -287,8 +250,6 @@ public class NetnotifyagentLauncher {
                                 entry.getName().endsWith(".dylib")) {
                             String fileName = new File(entry.getName()).getName();
                             File nativeFile = new File(nativesDir, fileName);
-
-                            // Extrair arquivo
                             try (InputStream is = jar.getInputStream(entry)) {
                                 Files.copy(is, nativeFile.toPath(),
                                         java.nio.file.StandardCopyOption.REPLACE_EXISTING);
@@ -301,73 +262,23 @@ public class NetnotifyagentLauncher {
                 }
             }
 
-            // Adicionar diretório de natives ao java.library.path
             String currentLibPath = System.getProperty("java.library.path", "");
             String newLibPath = nativesDir.getAbsolutePath();
             if (!currentLibPath.isEmpty()) {
                 newLibPath = newLibPath + File.pathSeparator + currentLibPath;
             }
             System.setProperty("java.library.path", newLibPath);
-            System.out.println("java.library.path atualizado com: " + nativesDir.getAbsolutePath());
 
-            // IMPORTANTE: Recarregar a lista de caminhos de biblioteca do ClassLoader
-            // Isso faz o JVM procurar nos novos caminhos
             try {
                 Field field = ClassLoader.class.getDeclaredField("sys_paths");
                 field.setAccessible(true);
                 field.set(null, null);
-                System.out.println("sys_paths limpo - java.library.path recarregado");
-            } catch (NoSuchFieldException | IllegalAccessException e) {
-                System.out.println("Aviso: Não foi possível recarregar sys_paths (esperado em Java 17+): "
-                        + e.getClass().getSimpleName());
-                // Em Java 17+, isso pode não funcionar, mas os natives foram extraídos e o path
-                // foi definido
-                // O ClassLoader nativo vai procurar no novo path de qualquer forma
             } catch (Exception e) {
-                System.out.println("Aviso: Erro inesperado ao recarregar sys_paths: " + e.getMessage());
+                System.out.println("Aviso: Não foi possível recarregar sys_paths: " + e.getClass().getSimpleName());
             }
 
         } catch (Exception e) {
             System.out.println("Erro ao extrair natives do JavaFX: " + e.getMessage());
-            e.printStackTrace();
-        }
-    }
-
-    private static void initializeJavaFXPlatform() throws Exception {
-        try {
-            System.out.println("Inicializando JavaFX Platform...");
-
-            Class<?> platformClass = Class.forName("javafx.application.Platform");
-
-            // Verificar se Platform já foi inicializado
-            Method isImplicitExitMethod = platformClass.getMethod("isImplicitExit");
-            boolean isInitialized = true;
-            try {
-                isImplicitExitMethod.invoke(null);
-            } catch (IllegalAccessException | IllegalArgumentException | InvocationTargetException e) {
-                isInitialized = false;
-            }
-
-            if (!isInitialized) {
-                // Platform.startup(() -> {})
-                Method startupMethod = platformClass.getMethod("startup", Runnable.class);
-                startupMethod.invoke(null, (Runnable) () -> {
-                    System.out.println("JavaFX Platform inicializado pelo launcher");
-                });
-
-                // Aguardar um pouco para garantir inicialização
-                Thread.sleep(500);
-            }
-
-            // Platform.setImplicitExit(false)
-            Method setImplicitExitMethod = platformClass.getMethod("setImplicitExit", boolean.class);
-            setImplicitExitMethod.invoke(null, false);
-
-            System.out.println("JavaFX Platform configurado com sucesso");
-
-        } catch (ClassNotFoundException | IllegalAccessException | IllegalArgumentException | InterruptedException
-                | NoSuchMethodException | SecurityException | InvocationTargetException e) {
-            throw new RuntimeException("Falha ao inicializar JavaFX Platform", e);
         }
     }
 
@@ -376,17 +287,16 @@ public class NetnotifyagentLauncher {
         System.err.println("Falha ao inicializar NetNotify Agent");
         System.err.println("Erro: " + e.getMessage());
 
-        // Tentar mostrar dialog de erro
         try {
             showErrorDialog("Erro ao Inicializar NetNotify Agent",
                     """
-                            N\u00e3o foi poss\u00edvel inicializar a aplica\u00e7\u00e3o.
-                            Poss\u00edveis causas:
-                            \u2022 Java 11+ n\u00e3o est\u00e1 instalado
-                            \u2022 Depend\u00eancias JavaFX n\u00e3o encontradas na pasta 'libs'
-                            \u2022 Problema de permiss\u00f5es
+                            Não foi possível inicializar a aplicação.
+                            Possíveis causas:
+                            • Java 17+ não está instalado
+                            • Dependências JavaFX não encontradas na pasta 'libs'
+                            • Problema de permissões
 
-                            Detalhes t\u00e9cnicos:
+                            Detalhes técnicos:
                             """ + e.getMessage());
         } catch (Exception dialogError) {
             System.err.println("Não foi possível mostrar dialog de erro: " + dialogError.getMessage());
@@ -397,11 +307,9 @@ public class NetnotifyagentLauncher {
 
     private static void showErrorDialog(String title, String message) {
         try {
-            // Tentar usar JOptionPane como fallback
             javax.swing.JOptionPane.showMessageDialog(null, message, title,
                     javax.swing.JOptionPane.ERROR_MESSAGE);
         } catch (HeadlessException e) {
-            // Se não conseguir mostrar dialog, pelo menos imprimir
             System.err.println("ERRO: " + title);
             System.err.println(message);
         }
